--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ cryptography==42.0.2
 cssmin==0.2.0
 dnspython>=2.3.0
 flask_session_captcha==1.3.0
+flask_mail
 gunicorn==20.1.0
 itsdangerous==2.1.2
 jsonschema[format]>=2.5.1,<4.0.0 # until https://github.com/Yelp/bravado-core/pull/385
@@ -45,4 +46,4 @@ zipp==3.11.0
 rcssmin==1.1.1
 zxcvbn==4.4.28
 psycopg2==2.9.5
-setuptools==65.5.1 # fixes CVE-2022-40897
+setuptools>=65.5.1 # fixes CVE-2022-40897
